# edams

./: AUTHORS  EDAMS.txt  Examples.md  HowToDeclareDevice.md  Installation.md  Introduction.md  Makefile  Makefile.am  ProjectHome.md  Screenshots.md  aclocal.m4  config.h.in  config.status  configure  configure.ac  edams.project  edams.rc  edams.spec.in
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
branches/edamsng/: Makefile.am  Makefile.in  NEWS  configure  edams.desktop.in  geany_run_script.sh
branches/edamsng/autom4te.cache/: output.0  output.1  traces.0
branches/edamsng/data/: Makefile.in
branches/edamsng/data/themes/: Makefile.in
branches/edamsng/data/themes/default/: clock.edc  home.edc  led.edc  mail.edc  monitor.edc  mute.edc  sign.edc  slider.edc  switch2.edc  text.edc  thermometer.edc
branches/edamsng/po/: ChangeLog  Makefile  Makefile.in  POTFILES  edams.pot  fr.po
branches/edamsng/src/lib/: Makefile  Makefile.in  action.c  action.h  cosm.c  crontab.c  crontab.h  device.c  device.h  device.h.gch  geany_run_script.sh  location.c  location.h  myfileselector.c  myfileselector.h  settings.c  settings.h  sound.c  sound.h  utils.h  voicerss.c  widget.c  widget.h
branches/edamsng/src/lib/.deps/: action.Plo  cosm.Plo  location.Plo  mbox.Plo  myfileselector.Plo  path.Plo  utils.Plo  xpl-io.Plo  xpl-listeners.Plo  xpl-store.Plo  xpl.Plo
data/db/: DS18B20.eet  PIR.eet
data/sensors/: DHT11.eet  DS18B20.eet  PIR.eet
data/themes/: Makefile.am
data/themes/default/: Makefile.am  about.edc  clock.edc  clockbling.edc  counter.edc  door.edc  edams.edc  edams.epc  home.edc  jauge.edc  led.edc  lightbulb.edc  mailbox.edc  monitor.edc  mute.edc  sign.edc  slider.edc  switch.edc  switch2.edc  tachometer.edc  temperature.edc  text.edc  thermometer.edc  thermometer2.edc
docs/: EDAMS-INSTALLATION-FR.odt  ROADMAP-FR.txt
po/: Makefile  Makefile.in  POTFILES.in  edams.pot  fr.gmo  fr.po
src/: Makefile  Makefile.am  Makefile.in
src/lib/: Makefile  Makefile.am  Makefile.in  action.c  action.h  cosm.c  cosm.h  crontab.c  crontab.h  device.c  device.h  emulation.h  gettext.h  gnuplot.c  gnuplot.h  libedams.h  location.c  location.h  mbox.c  myfileselector.c  myfontselector.h  path.c  path.h  rooms.c  rooms.geneet  rooms.h  sensors.c  sensors.h  serial.c  serial.h  settings.c  settings.h  sound.c  utils.c  utils.h  voicerss.c  xPL-hub.c  xPL-io.c  xPL-service.c  xPL-store.c  (+11 more)
src/lib/.deps/: cJSON.Plo  crontab.Plo  settings.Plo  sound.Plo  voicerss.Plo  widget.Plo  xpl-message.Plo  xpl-service.Plo  xpl-utils.Plo
src/modules/skel/: Makefile.am  module.edc  settings.c
trunk/: ChangeLog  README  configure.ac  edams.spec.in
trunk/data/: Makefile.am
trunk/data/db/: DHT11.eet
trunk/data/icons/: Makefile.am
trunk/data/themes/default/: Makefile  Makefile.am  Makefile.in  about.edc  clock.edc  clockbling.edc  counter.edc  door.edc  edams.edc  edams.epc  home.edc  input.edc  jauge.edc  led.edc  lightbulb.edc  lock.edc  mail.edc  mailbox.edc  monitor.edc  mute.edc  sign.edc  slider.edc  switch.edc  switch2.edc  tachometer.edc  text.edc  thermometer.edc  thermometer2.edc
trunk/docs/: ROADMAP-FR.txt
trunk/po/: Makevars  POTFILES.in  edams.pot  fr.po  frilogos.pot
trunk/src/: Makefile.am
trunk/src/lib/: Makefile.am  action.c  action.h  cosm.c  cosm.h  crontab.c  crontab.h  device.c  device.h  emulation.c  gnuplot.c  gnuplot.h  libedams.h  location.c  location.h  mbox.c  mem.c  mem.h  modules.c  modules.h  myfileselector.c  myfileselector.h  myfontselector.c  path.c  path.h  rooms.c  rooms.h  sensors.c  sensors.h  serial.c  serial.h  settings.c  settings.h  sound.h  utils.c  utils.h  voicerss.h  widget.c  xPL-config.c  xPL-hub.c  (+15 more)
trunk/src/modules/: Makefile.am
trunk/src/modules/skel/: module.c  module.h
wiki/: Examples.wiki  HowToDeclareDevice.wiki  HowToSensor.wiki  Installation.wiki  Introduction.wiki  PageName.wiki  Screenshots.wiki  WikiSummary.wiki
wiki/fr/: Examples.wiki  Installation.wiki  Introduction.wiki  Screenshots.wiki
