AUTOMAKE_OPTIONS     = 1.6 foreign
MAINTAINERCLEANFILES = \
Makefile \
Makefile.in \
aclocal.m4 \
compile \
config.guess \
config.h.in  \
config.sub  \
configure  \
depcomp \
install-sh \
ltmain.sh  \
missing  \
m4/libtool.m4 \
m4/lt~obsolete.m4 \
m4/ltoptions.m4 \
m4/ltsugar.m4 \
m4/ltversion.m4

SUBDIRS = . data src po

DESKTOP = edams.desktop
ICON = edams.png

icondir = $(datadir)/pixmaps
icon_DATA = $(ICON)

desktopdir = $(datadir)/applications
desktop_DATA = $(DESKTOP)
